# psis-gejk

./: .gitignore  PyTorchTest.py  README.md  amd_requirements.txt  environment.yml  pyproject.toml
RelatedProjects/epymarl/: .gitignore  README.md  plot_results.py  pyproject.toml
RelatedProjects/epymarl/results/models/mappo_seed186440626_lbforaging:Foraging-8x8-2p-2f-coop-v3_2026-03-18 23:07:58.261049/10200/: agent.th  agent_opt.th  critic.th  critic_opt.th
RelatedProjects/epymarl/results/models/mappo_seed186440626_lbforaging:Foraging-8x8-2p-2f-coop-v3_2026-03-18 23:07:58.261049/15200/: agent.th  agent_opt.th  critic.th  critic_opt.th
RelatedProjects/epymarl/results/models/mappo_seed186440626_lbforaging:Foraging-8x8-2p-2f-coop-v3_2026-03-18 23:07:58.261049/200/: agent.th  agent_opt.th  critic.th  critic_opt.th
RelatedProjects/epymarl/results/models/mappo_seed186440626_lbforaging:Foraging-8x8-2p-2f-coop-v3_2026-03-18 23:07:58.261049/5200/: agent.th  agent_opt.th  critic.th  critic_opt.th
RelatedProjects/epymarl/results/sacred/mappo/highway-v0/1/: config.json  cout.txt  run.json
RelatedProjects/epymarl/results/sacred/mappo/highway-v0/2/: config.json  cout.txt  run.json
RelatedProjects/epymarl/results/sacred/mappo/highway-v0/3/: config.json  cout.txt  run.json
RelatedProjects/epymarl/results/sacred/mappo/highway-v0/4/: config.json  run.json
RelatedProjects/epymarl/src/: search.config.example.yaml
RelatedProjects/epymarl/src/config/algs/: mappo.yaml
RelatedProjects/epymarl/src/config/envs/: gymma.yaml
RelatedProjects/epymarl/src/envs/: gymma.py
(+110 files in other folders)
