[project]
name = "psis-gejk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docopt>=0.6.2",
    "gymnasium>=1.3.0",
    "highway-env==1.10.1",
    "matplotlib>=3.10.9",
    "moviepy>=2.2.1",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pygame>=2.6.1",
    "pyvirtualdisplay>=3.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "xvfbwrapper>=0.2.23",
]
